Parameterize cue regex, rename to osc-cue-monitor
Move things around and make the "cue" regex configurable via
the ini file.

Consistently rename everything (package, config file etc.) to
"osc-cue-monitor".

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cue-display"
+name = "osc-cue-monitor"
 version = "0.1.0"
 authors = ["Carsten Koester <ckoester@cisco.com>"]
 edition = "2018"
