--- a/osc-cue-monitor.ini
+++ b/osc-cue-monitor.ini
@@ -8,3 +8,6 @@ path = /System/Library/Fonts/Helvetica.ttc
 
 [window]
 color = 000000    ; Hexadecimal RGB
+
+[osc]
+cue_regex = ^/cue/([\d\.]+)/start$
